# samplerqrgenerator

./: .gitignore  METADATA  README.md  __init__.py  pyproject.toml  sampler_qr_generator.ps1  sampler_qr_generator.py  test_entry_points.py  test_payload.txt
qr_generator/: sampler_qr_generator.ps1  sampler_qr_generator.py
src/samplerqrgenerator/: __init__.py  sampler_qr_generator.py
survey123_parser/js/: test_functions.js
xml_parser/: index.html
xml_parser/js/: io_utils.js  parse_functions.js  parse_functions_using_dom.js  test_functions.js
xml_parser/xml/: 20233457.xml
