[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.10.11"
name = "samplerqrgenerator"
version = "0.1.0"
dependencies = [
    "qrcode",
    "Pillow",
]

[project.entry-points.'hilltop.preregistration']
"QRGenerator" = 'samplerqrgenerator:QRGenerator'

 
