[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.10.11"
name = "samplerqrgenerator"
version = "v0.1.1"
dependencies = [
    "qrcode",
    "Pillow",
]

[project.entry-points.'hilltop.preregistration']
"QRGenerator" = 'samplerqrgenerator:QRGenerator'
