[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.10.11"
name = "samplerqrgenerator"
version = "v0.1.2"
dependencies = [
    "qrcode",
    "Pillow",
]

[project.entry-points.'hilltop.preregistration']
"QRGenerator" = 'samplerqrgenerator:QRGenerator'

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
samplerqrgenerator = ["*.png"]
